# open-farm-sim

./: .dockerignore  Dockerfile  README.md  prd.md  pyproject.toml
app/: domain.py  engine.py  main.py  persistence.py
app/web/: first_steps.html  ops.html
client/: sample_agent.py
tests/: scenario_utils.py  test_api.py  test_e2e.py  test_engine.py  test_persistence.py  test_scenarios_core.py  test_scenarios_matrix.py
